src/test/06-Errors/error-const-set-1.txt
error-const-set-1.ck:4:3: error: cannot chuck/assign => to 'pi'...
[4] 1 => pi;
      ^
error-const-set-1.ck:4:6: error: ...(reason: 'pi' is a constant, and is not assignable)
[4] 1 => pi;
         ^
